# theloop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: agno.md  env-management.md  litellm-endpoints.md  pi.md  regression-recovery-2026-05-01.md  spec.md
docs/map/: 00-map.md  01-structure-and-entries.md  02-modules-and-data-flow.md  03-dependencies-config-testing-gaps.md  04-svg-regression-analysis.md
examples/: be-me.md  capybara.md  dragon-flappy.spec.md  flamingo.md  improve-spec.spec.md  pelican.spec.md  pelican.spec2.md  primes.spec.md  recursive.md  robot.md  seasons.md  sushi.md  the-trip.md  the-trip.prose.md  watch.spec.md  what-if.md
runs-local/20260429-075345-pelican-spec/: events.jsonl
runs-local/20260429-082650-dragon-flappy-spec/: events.jsonl
runs-local/20260429-084126-improve-spec-spec/: events.jsonl
runs-local/20260429-093343-improve-spec-spec/: index.html
runs-local/20260429-095608-improve-spec-spec/: index.html
runs-local/20260429-105919-watch-spec/: index.html
runs-local/20260429-111622-watch-spec/: events.jsonl
runs-local/20260429-115335-pelican-spec/: events.jsonl  index.html
runs-local/20260429-115658-pelican-spec2/: events.jsonl
runs-local/20260429-140421-watch-spec/: events.jsonl  index.html
runs-local/20260429-143718-watch-spec/: events.jsonl
tests/: start.sh  test_generic_adapter.py  test_judge_scoring.py  test_loop_retry_prompt.py  test_orchestrator_plan.py  test_prose_adapter.py  test_reporter.py  test_svg_adapter.py  test_terminator.py  test_workspace_reconcile.py
(+548 files in other folders)
