[project]
name = "theloop"
version = "0.1.0"
description = "Closed agentic loop: agno orchestrates, pi codes, Qwen3.6 judges."
requires-python = ">=3.12,<3.13"
dependencies = [
    "agno==2.6.4",
    "openai==2.33.0",
    "playwright==1.58.0",
    "pydantic==2.13.3",
    "python-dotenv==1.2.2",
    "typer==0.25.0",
    "GitPython==3.1.48",
]

[project.scripts]
theloop = "theloop.cli:app"

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theloop"]

[tool.uv]
# Reuse the existing .venv at the project root rather than letting uv
# create a fresh one. The venv already has most deps installed.
managed = true
